--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "email-js": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.1",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
